spec/rules/at/valid/list_first_item.js
export const payload  = { tags: ['featured', 'other', 'stuff'] }
export const expected = []

